# npc-generator

./: .gitignore  CMakeLists.txt  README.md
include/: mainwindow.h  npcgenerator.h
src/: main.cpp  mainwindow.cpp  npcgenerator.cpp
